--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,9 +18,9 @@
     "html-to-image": "1.11.11",
     "jspdf": "2.5.1",
     "lucide-react": "0.294.0",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "2.1.0",
     "tailwindcss-animate": "1.0.7"
   },
